# psco-ship-risk-predict

./: .gitignore  README.md  main.py  pyproject.toml
analysis/exploratory/: analyze_predictions.py  timeline_analysis.py  timeline_summary.py
analysis/nir_comparison/: add_NIR_columns.py  generate_predictions.py  model_comparison.py
data/reference/: detention_summary.csv  timeline.csv
docs/: 航港局.txt
scripts/: __init__.py  evaluate.py  feature_analysis.py  generate_data.py  train.py
src/psco/: __init__.py  config.py  data_processor.py  feature_importance.py  model.py  trainer.py
tests/: test_simulator.py
